# aethervanta

./: .gitignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
src/: App.jsx  Dashboard.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/dev_inter/: dev_connect.rs  dev_list_names.rs  mod.rs
src-tauri/src/sdr_barn/: dev_connect.rs  dev_list_names.rs  list_sdrs.rs  mod.rs  sdr_state.rs
src/components/: AnomalyLog.jsx  ConstellationSelector.jsx  ExportPanel.jsx  Header.jsx  SdrConfigurations.jsx  Sidebar.jsx  SignalChart.jsx
src/context/: AppConfigContext.jsx
src/pages/: Analysis.jsx  Anomalies.jsx  Dashboard.jsx  Navigation.jsx  Settings.jsx  Spectrum.jsx
src/routes/: index.jsx
