[package]
name = "app"
version = "0.1.0"
description = "AI-Powered GNSS Integrity Monitor"
authors = ["AetherVanda Lab"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
gnss-sdr-rs = { git = "https://github.com/kewei/gnss-sdr-rs", branch = "main" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.5.0"
soapysdr = "0.4.2"
strum = "0.27"
strum_macros = "0.27"
